--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
         <!-- Main Container -->
 
-    <div class="main-cont"></div>
+    <div class="main-cont">
+
+
+    </div>
 
     <div class="model-cont">
         <textarea spellcheck="false" class="textarea-cont"></textarea>
@@ -37,7 +40,7 @@
             <div class="lightpink priority-color"></div>
             <div class="lightblue priority-color"></div>
             <div class="lightgreen priority-color"></div>
-            <div class="black priority-color"></div>
+            <div class="black priority-color border"></div>
         </div>
     </div>
 
