--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
         <!-- Main Container -->
 
     <div class="main-cont">
-
+        <!-- <div class="ticket-cont">
+            <div class="ticket-color ${ticketColor}"></div>
+            <div class="ticket-id">#${ticketID}</div>
+            <div class="task-area">${ticketTask.value}</div>
+            <div class="ticket-lock">
+                <i class="fa-solid fa-lock"></i>
+            </div>
+        </div> -->
 
     </div>
 
@@ -44,7 +51,7 @@
         </div>
     </div>
 
-
+    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
